--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/autofarmnetwork/frontend-config/issues"
   },
-  "homepage": "https://github.com/autofarmnetwork/frontend-config#readme"
+  "homepage": "https://github.com/autofarmnetwork/frontend-config#readme",
+  "dependencies": {
+    "axios": "^0.21.4"
+  }
 }
